Improve and bugfix on show less/more button
> Improving show less button fixed on bottom
> Bugfix: it was covering the project list

--- a/stylesheets/sass/_settings.scss
+++ b/stylesheets/sass/_settings.scss
@@ -1247,8 +1247,8 @@ $default-float: left;
 
 // Controlling the styles for the title in the top bar
 
-// $topbar-title-weight: bold;
-// $topbar-title-font-size: emCalc(17);
+$topbar-title-weight: bold;
+$topbar-title-font-size: emCalc(17);
 
 // Style the top bar dropdown elements
 
